intelli-credit/pytest_out.txt

=================================== ERRORS ====================================
__________ ERROR collecting tests/test_financial_extractor_trends.py __________
.venv\Lib\site-packages\_pytest\python.py:507: in importtestmodule
    mod = import_path(
.venv\Lib\site-packages\_pytest\pathlib.py:587: in import_path
    importlib.import_module(module_name)
C:\Users\rehna\AppData\Local\Programs\Python\Python313\Lib\importlib\__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
.venv\Lib\site-packages\_pytest\assertion\rewrite.py:197: in exec_module
    exec(co, module.__dict__)
tests\test_financial_extractor_trends.py:12: in <module>
    from modules.document_intelligence.financial_extractor import FinancialExtractor
E     File "E:\iithyderabad\intelli-credit\modules\document_intelligence\financial_extractor.py", line 785
E       f"YoY changes: {[f\"{y['pct_change']:+.1f}%\" for y in rev_yoy]}"
E                          ^
E   SyntaxError: unexpected character after line continuation character
=========================== short test summary info ===========================
ERROR tests/test_financial_extractor_trends.py
!!!!!!!!!!!!!!!!!!! Interrupted: 1 error during collection !!!!!!!!!!!!!!!!!!!!
1 error in 0.23s
